# billsim

./: .env-sample  .gitignore  .python-version  .style.yapf  Makefile  README.adoc  docker-compose.yml  dockerfile  docs_generator.sh  pyproject.toml  requirements.txt  setup.cfg
common/: bill_similarity.py  constants.py  elastic_load.py  pymodels.py  utils.py
docs/: README.adoc  README.html
es/: ES_SIMILARITY.adoc
src/: .env-sample  billsim.db.sample
src/billsim/: bill_similarity.py  compare.py  constants.py  database-lite.py  database.py  elastic_load.py  pymodels.py  utils.py  utils_db.py  utils_es.py
tests/: constants_test.py  elastic_load_test.py  utils_test.py
tests/samples/data/congress/116/bills/hr200/: BILLS-116hr200ih-uslm.xml  BILLS-116hr200ih.htm  BILLS-116hr200ih.premis  BILLS-116hr200ih.xml  BILLS-116hr200ih_mods.xml
tests/samples/data/congress/116/bills/hr2000/: BILLS-116hr2000ih-uslm.xml  BILLS-116hr2000ih.htm  BILLS-116hr2000ih.xml  BILLS-116hr2000ih_mods.xml
tests/samples/data/congress/116/bills/hr2001/: BILLS-116hr2001ih-uslm.xml  BILLS-116hr2001ih.htm  BILLS-116hr2001ih.xml  BILLS-116hr2001ih_mods.xml
tests/samples/data/congress/116/bills/hr2002/: BILLS-116hr2002eh-uslm.xml  BILLS-116hr2002eh.htm  BILLS-116hr2002eh.xml  BILLS-116hr2002eh_mods.xml  BILLS-116hr2002ih-uslm.xml  BILLS-116hr2002ih.htm  BILLS-116hr2002ih.xml  BILLS-116hr2002ih_mods.xml  BILLS-116hr2002rfs-uslm.xml  BILLS-116hr2002rfs.htm  BILLS-116hr2002rfs.xml  BILLS-116hr2002rfs_mods.xml
tests/samples/data/congress/116/bills/hr2003/: BILLS-116hr2003ih-uslm.xml  BILLS-116hr2003ih.htm  BILLS-116hr2003ih.xml  BILLS-116hr2003ih_mods.xml
tests/samples/data/congress/116/bills/hr2004/: BILLS-116hr2004ih-uslm.xml  BILLS-116hr2004ih.htm  BILLS-116hr2004ih.xml  BILLS-116hr2004ih_mods.xml
tests/samples/data/congress/116/bills/hr2005/: BILLS-116hr2005ih-uslm.xml  BILLS-116hr2005ih.htm  BILLS-116hr2005ih.xml  BILLS-116hr2005ih_mods.xml
tests/samples/data/congress/116/bills/hr2006/: BILLS-116hr2006ih-uslm.xml  BILLS-116hr2006ih.htm  BILLS-116hr2006ih.xml  BILLS-116hr2006ih_mods.xml
tests/samples/data/congress/116/bills/hr2007/: BILLS-116hr2007ih-uslm.xml  BILLS-116hr2007ih.htm  BILLS-116hr2007ih.xml  BILLS-116hr2007ih_mods.xml
tests/samples/data/congress/116/bills/hr2008/: BILLS-116hr2008ih-uslm.xml  BILLS-116hr2008ih.htm  BILLS-116hr2008ih.xml  BILLS-116hr2008ih_mods.xml
(+60 files in other folders)
