[metadata]
name = billsim-aih
version = 0.0.2
author = Ari Hershowitz 
author_email = arihershowitz@gmail.com
description = "A package for finding similarity between bills" 
long_description = file: README.adoc
long_description_content_type = text/asciidoc
url = https://github.com/aih/billsim
project_urls =
    Bug Tracker = https://github.com/aih/billsim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CC0 1.0 Universal
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src