[metadata]
name = billsim-aih
version = 0.0.10
author = Ari Hershowitz 
author_email = arihershowitz@gmail.com
description = "A package for finding similarity between bills" 
long_description = file: README.adoc
long_description_content_type = text/asciidoc
url = https://github.com/aih/billsim
project_urls =
    Bug Tracker = https://github.com/aih/billsim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CC0 1.0 Universal
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.9
install_requires = 
    lxml==4.6.4
    elasticsearch==7.10.1
    psycopg2==2.9.2
    SQLAlchemy==1.4.26
    sqlmodel==0.0.4
    python-dotenv==0.19.1



[options.package_data]
* = *.json

[options.packages.find]
where = src