[metadata]
name = billsim-aih
version = 0.0.19
author = Ari Hershowitz 
author_email = arihershowitz@gmail.com
description = "A package for finding similarity between bills" 
long_description = file: README.adoc
long_description_content_type = text/asciidoc
url = https://github.com/aih/billsim
project_urls =
    Bug Tracker = https://github.com/aih/billsim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CC0 1.0 Universal
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
install_requires = 
    elasticsearch~=7.10
    lxml~=4.8
    psycopg2-binary~=2.9
    python-dotenv~=0.19
    SQLAlchemy~=1.4
    sqlmodel==0.0.6
    tomli~=2.0



[options.package_data]
* = *.json

[options.packages.find]
where = src